Relatorio profissional com link tutorial - 14:30

--- a/index.html
+++ b/index.html
@@ -256,6 +256,11 @@
             <div style="margin-top: 15px;">
                 <small><i class="bi bi-person"></i> Nome do Estudante | <i class="bi bi-calendar"></i> 29 de agosto de 2025</small>
             </div>
+            <div style="margin-top: 20px;">
+                <a href="tutorial.html" class="btn btn-warning btn-lg" target="_blank">
+                    <i class="bi bi-book"></i> Tutorial Didático Completo
+                </a>
+            </div>
         </div>
 
         <!-- Introdução -->
